--- a/web/src/css/flowdetail.less
+++ b/web/src/css/flowdetail.less
@@ -25,7 +25,7 @@
         margin-top: 2px;
         padding-left: 10px;
         padding-right: 7px;
-        color: grey;
+        color: var(--mitmweb-fg-muted);
         font-size: 15px;
         border: none;
         background: transparent;
